@@ -1,0 +1,33 @@
+#!/bin/sh
+# Copyright (C) 2010 Stefano Lattarini <stefano.lattarini@gmail.com>.
+# This file is part of the Ratfor Testsuite.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Check that ratfor comments are not terminated by right curly brackets.
+
+. ../lib/rat4-testsuite-init.sh || exit 99
+
+cat > tst.r <<'EOF'
+{ # foobar } zardoz; if
+}
+EOF
+
+run_RATFOR tst.r || testcase_FAIL "ratfor failed on comment-only input"
+test ! -s stderr || testcase_FAIL "ratfor produced unexpected diagnostic"
+$GREP -i 'zardoz' stdout && testcase_FAIL
+
+testcase_DONE
+
+# vim: ft=sh ts=4 sw=4 et
